--- a/source/_templates/layout.html
+++ b/source/_templates/layout.html
@@ -1,5 +1,7 @@
 {% extends "!layout.html" %}
 {% block extrahead %}
-    <link rel="icon" type="image/svg+xml" href="/favicons/favicon.svg">
-    <link rel="mask-icon" href="/favicons/favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="/_static/favicon.svg">
+    <link rel="mask-icon" href="/_static/favicon.svg">
+    <link rel="stylesheet" href="https://cdn.howso.com/fonts/inter/3.19/typeface.css">
+    <script src="https://cdn.usefathom.com/script.js" data-site="IXEHVNCB" data-honor-dnt="true" defer></script>
 {% endblock %}
