Added js support detection to avoid flash of unstyled content

--- a/source/_templates/layout.html
+++ b/source/_templates/layout.html
@@ -1,7 +1,14 @@
-{% extends "!layout.html" %}
-{% block extrahead %}
-    <link rel="icon" type="image/svg+xml" href="/_static/favicon.svg">
-    <link rel="mask-icon" href="/_static/favicon.svg">
-    <link rel="stylesheet" href="https://cdn.howso.com/fonts/inter/3.19/typeface.css">
-    <script src="https://cdn.usefathom.com/script.js" data-site="IXEHVNCB" data-honor-dnt="true" defer></script>
+{% extends "!layout.html" %} {% block extrahead %}
+<link rel="icon" type="image/svg+xml" href="/_static/favicon.svg" />
+<link rel="mask-icon" href="/_static/favicon.svg" />
+<link
+  rel="stylesheet"
+  href="https://cdn.howso.com/fonts/inter/3.19/typeface.css"
+/>
+<script
+  src="https://cdn.usefathom.com/script.js"
+  data-site="IXEHVNCB"
+  data-honor-dnt="true"
+  defer
+></script>
 {% endblock %}
